--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,23 +14,40 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>Coffee Login</title>
 </head>
 
 <body
     style="background-image: url(https://raw.githubusercontent.com/CiurescuP/LogIn-Form/main/bg.jpg); background-repeat: no-repeat;">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% set is_error = false %}
+    {% for message in messages %}
+    {% if 'thất bại' in message.lower() or 'lỗi' in message.lower() %}
+    {% set is_error = true %}
+    {% endif %}
+    {% endfor %}
+    <div id="popup-message" class="popup-message {{ 'error' if is_error else 'success' }}" style="display:none;">
+        {% for message in messages %}
+        {{ message }}<br>
+        {% endfor %}
+    </div>
+    {% endif %}
+    {% endwith %}
     <!-- =========================== -->
     <!-- Start Body -->
-    <form>
+    <form method="POST" action="">
         <h3>Sign In</h3>
 
         <label for="username">Tài Khoản</label>
-        <input type="text" placeholder="Your Phone" id="username">
+        <input type="text" placeholder="Your Phone" id="username" name="username">
 
         <label for="password">Mật Khẩu</label>
-        <input type="password" placeholder="Password" id="password">
+        <input type="password" placeholder="Password" id="password" name="password">
 
-        <button>Đăng Nhập</button>
+        <button type="submit">Đăng Nhập</button>
         <p class="social-text">Bạn chưa có tài khoản? </p>
 
         <div class="social-icons">
@@ -38,15 +55,15 @@
                     <i class="fa-solid fa-phone"></i>
                 </button>
             </a>
-            <button class="social-icon fb" > <!--onclick="loginWithFacebook()"-->
+            <button class="social-icon fb"> <!--onclick="loginWithFacebook()"-->
                 <i class="fa-brands fa-facebook"></i>
             </button>
             <button class="social-icon tw"><i class="fa-brands fa-google"></i></button>
             <button class="social-icon in"><i class="fa-brands fa-apple"></i></button>
 
         </div>
-        <div style="text-align: center; margin-top: 7px;">
-            <a href="{{ url_for('index.index_page') }}" style="text-decoration: none; font-size: 16px; color: white;">
+        <div class="return-page">
+            <a href="{{ url_for('index.index_page') }}">
                 ⬅ Quay lại trang chủ
             </a>
         </div>
@@ -55,8 +72,9 @@
 
     <!-- JavaScrip Link -->
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/login.js') }}"></script>
     <script>
-        
+
     </script>
 </body>
 
